2007-08-14  Sven Neumann  <sven@gimp.org>

	* libgimpwidgets/gimpcolorprofilecombobox.[ch]
	* libgimpwidgets/gimpcolorprofilestore.[ch]
	* libgimpwidgets/gimpcolorprofilestore-private.h: changed API to
	deal with filenames instead of URIs.

	* app/widgets/gimpprofilechooserdialog.[ch]: same here.

	* app/dialogs/preferences-dialog.c
	* plug-ins/common/lcms.c: changed accordingly.

2007-08-14  Sven Neumann  <sven@gimp.org>

	* app/dialogs/preferences-dialog.c
	* plug-ins/common/lcms.c: don't unref the file-chooser dialog.

2007-08-14  Sven Neumann  <sven@gimp.org>

	* libgimpwidgets/Makefile.am
	* libgimpwidgets/gimpwidgets.h
	* libgimpwidgets/gimpwidgetstypes.h
	* libgimpwidgets/gimpcolorprofilecombobox.[ch]
	* libgimpwidgets/gimpcolorprofilestore.[ch]
	* libgimpwidgets/gimpcolorprofilestore-private.h: new widget to
	select color profiles.

	* libgimpwidgets/gimpwidgets.def: updated.

	* app/widgets/gimpprofilechooserdialog.[ch]: remember the name of
	the last previewed profile.

	* app/dialogs/preferences-dialog.c: use the new color profile
	combo-box.

	* plug-ins/common/lcms.c: use the new color profile combo-box.

2007-08-14  Michael Natterer  <mitch@gimp.org>

	* app/core/gimpimage-item-list.c: fixed API docs.

2007-08-14  Øyvind Kolås  <pippin@gimp.org>

	* app/display/gimpdisplayshell-render.c: Fixed regression at zoom
	levels > 100%, and moved some floating point code out of the worker
	function.

2007-08-14  Raphaël Quinet  <raphael@gimp.org>

	* plug-ins/common/dicom.c
	* plug-ins/common/psd-load.c
	* plug-ins/common/sunras.c: applied patch from Nils Philippsen
	that replaces several calls to g_error() by g_message() and
	gimp_quit() so that GIMP does not complain when a plug-in exits.
	Fixes bug #466610.

2007-08-14  Raphaël Quinet  <raphael@gimp.org>

	* plug-ins/common/dicom.c
	* plug-ins/common/psd-load.c
	* plug-ins/common/sunras.c: applied patch from Nils Philippsen
	that replaces several calls to g_error() by g_message() and