@@ -1,3 +1,14 @@
+2007-08-15  Sven Neumann  <sven@gimp.org>
+
+	* plug-ins/script-fu/scripts/Makefile.am
+	* plug-ins/script-fu/scripts/fade-outline.scm: removed
+	fade-outline script. Fixes bug #466382.
+
+2007-08-15  Sven Neumann  <sven@gimp.org>
+
+	* app/dialogs/preferences-dialog.c: add tooltips to the profile
+	combo boxes.
+
 2007-08-14  Sven Neumann  <sven@gimp.org>
 
 	* libgimpwidgets/gimpcolorprofilecombobox.[ch]
